@startuml

namespace al5d_cpp {

    abstract class CommunicatorBase {
		+ is_connected() : bool
		+ {abstract} transmit(message : String) : void
		# CommunicatorBase()
		# {static} log_transmitting_(message : String) : void
	}

    class AL5DBase {
		+ add_poses(posing_config : PosingConfig) : void
		+ get_joint(joint_name : JointName) : JointBase
		+ get_joint(joint_type : JointType) : JointBase
		+ is_connected() : bool
		+ is_moving() : bool
		+ move_to_angles(joint_name_angles : JointNameAngles) : void
		+ move_to_angles(joint_name_angles : JointNameAngles, move_duration : Duration) : void
		+ move_to_angles(joint_type_angles : JointTypeAngles) : void
		+ move_to_angles(joint_type_angles : JointTypeAngles, move_duration : Duration) : void
		+ move_to_calibrating_pose() : void
		+ move_to_finish_pose() : void
		+ move_to_pose(pose_name : PoseName) : void
		+ move_to_pose(pose_name : PoseName, move_duration : Duration) : void
		+ move_to_start_pose() : void
		+ set_communicator_ptr(communicator_ptr : CommunicatorBase) : void
		+ set_poses(posing_config : PosingConfig) : void
		+ stop() : void
		# AL5DBase(config : AL5DBaseConfig)
		# communicator_ptr_ : CommunicatorBase
		# joints_ : JointBases
		# transmit_command_(command : ProtocolCommand) : void
		# transmit_command_terminator_() : void
		- calibrating_pose_name__ : PoseName
		- construct_joints__(joint_configs : JointBaseConfigs) : JointBases
		- construct_poses__(joint_name : JointName) : JointType
		- construct_poses__(joint_name_angle : JointNameAngle) : JointTypeAngle
		- construct_poses__(joint_name_angles : JointNameAngles) : JointTypeAngles
		- construct_poses__(pose_config : PoseConfig) : Pose
		- construct_poses__(pose_configs : PoseConfigs) : Poses
		- finish_pose_name__ : PoseName
		- get_pose__(pose_name : PoseName) : Pose
		- poses__ : Poses
		- set_joint_communicator_ptrs__() : void
		- start_pose_name__ : PoseName
		- start_timer__(move_duration : Duration) : void
		- timer_ptr__ : Timer
		- transmit__(message : ProtocolCommand) : void
		- validate_communicator_ptr__() : void
		- {static} default_if_zero__(move_duration : Duration) : Duration
		- {static} get_log_moving_to_angles__(angle_count : size_t) : std::string
		- {static} get_log_moving_to_angles__(angle_count : size_t, duration : Duration) : std::string
		- {static} get_log_moving_to_pose__(pose_name : PoseName) : std::string
		- {static} get_log_moving_to_pose__(pose_name : PoseName, duration : Duration) : std::string
		- {static} log_moving_to_angles__(angle_count : size_t) : void
		- {static} log_moving_to_angles__(angle_count : size_t, move_duration : Duration) : void
		- {static} log_moving_to_pose__(pose_name : PoseName) : void
		- {static} log_moving_to_pose__(pose_name : PoseName, move_duration : Duration) : void
		- {static} move_to__(joint : JointBase, degree : Degree) : void
		- {static} move_to__(joint : JointBase, degree : Degree, move_duration : Duration) : void
	}

    class JointBase {
		+ JointBase(joint_config : JointBaseConfig)
		+ get_type() : JointType
		+ has_name(name : JointName) : bool
		+ has_type(type : JointType) : bool
		+ move_to_angle(angle : Angle) : void
		+ move_to_angle(angle : Angle, move_duration : Duration) : void
		+ set_communicator_ptr(communicator_ptr : CommunicatorBase) : void
		+ stop() : void

		- board_channel__ : BoardChannel
		- calculate_convert_ratio__() : double
		- communicator_ptr__ : CommunicatorBase
		- convert_ratio__ : double
		- degree_range__ : DegreeRange
		- get_log_moving__(angle : Angle, pulse_width : PulseWidth) : std::string
		- get_log_moving__(angle : Angle, pulse_width : PulseWidth, duration : Duration) : std::string
		- log_moving__(angle : Angle, pulse_width : PulseWidth) : void
		- log_moving__(angle : Angle, pulse_width : PulseWidth, move_duration : Duration) : void
		- name__ : std::string
		- pulse_width_range__ : PulseWidthRange
		- to_pulse_width__(angle : Angle) : PulseWidth
		- transmit__(message : ProtocolCommand) : void
		- transmit_move_duration__(move_duration : Duration) : void
		- transmit_pulse_width__(pulse_width : PulseWidth) : void
		- type__ : JointType
		- validate_communicator_ptr__() : void
		- validate_reachability__(angle : Angle) : void
	}

    class JointBaseConfig <<(S,Orchid)>> #eee
    class AL5DBaseConfig <<(S,Orchid)>> #eee

    CommunicatorBase "1" <- "*" JointBase
    CommunicatorBase "1" <-- "*" AL5DBase
    AL5DBase "1" -> "6" JointBase
    AL5DBase ..> AL5DBaseConfig
    JointBase ..> JointBaseConfig
}

legend right
  <b><color:Orchid>S Struct</color></b>
  <b><color:DarkCyan>C Class</color></b>
  <b><color:SkyBlue>A Abstract</color></b>
endlegend

@enduml
